--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "vue": "^3.2.37"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
-    "vite": "^3.0.7"
+    "element-plus": "^2.5.0",
+    "less": "^4.2.0",
+    "less-loader": "^7.3.0",
+    "style-resources-loader": "^1.5.0",
+    "vite": "^3.0.7",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
