--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "style-resources-loader": "^1.5.0",
     "vite": "^3.0.7",
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "vue-router": "^4.2.5"
   }
 }
