--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "vite": "^3.0.7",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "mitt":"^3.0.1"
   }
 }
