--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,9 @@
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "vue-router": "^4.2.5",
-    "mitt":"^3.0.1"
+    "mitt":"^3.0.1",
+    "masonry-layout": "^4.2.2",
+    "@yeger/vue-masonry-wall": "^5.0.5",
+    "vue-masonry": "^0.16.0"
   }
 }
