--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,9 @@
     "mitt":"^3.0.1",
     "masonry-layout": "^4.2.2",
     "@yeger/vue-masonry-wall": "^5.0.5",
-    "vue-masonry": "^0.16.0"
+    "vue-masonry": "^0.16.0",
+    "vue-waterfall-plugin-next": "^2.3.1",
+    "animate.css": "^4.1.1",
+    "v3-waterfall": "^1.3.2"
   }
 }
