--- a/settings.yml
+++ b/settings.yml
@@ -1,8 +1,10 @@
-proxy: http://127.0.0.1:10811
-cookie: 26338360_7co6cX1DcbRnqclbVWptSyzSSNrSanal
-agelimit: true
+prefix: 'http://127.0.0.1:'
+proxy: "10811"
+cookie: 26338360_alRggBevpTyZ9LHGDn2SukPtxOsfXo54
+agelimit: false
 downloadposition: D:\personal things\Download
 likelimit: 3500
 retry429: 10000
 downloadinterval: 500
 retryinterval: 2000
+differauthor: true
