--- a/settings.yml
+++ b/settings.yml
@@ -1,6 +1,6 @@
 prefix: 'http://127.0.0.1:'
-proxy: "10811"
-cookie: ""
+proxy: ""
+cookie:
 agelimit: false
 downloadposition: Download
 likelimit: 3500
