--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,18 +13,19 @@
     "vue": "^3.2.37"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.0.3",
+    "vite": "^3.2.7",
+    "@vitejs/plugin-vue": "^3.2.0",
     "element-plus": "^2.5.0",
     "less": "^4.2.0",
     "less-loader": "^7.3.0",
     "style-resources-loader": "^1.5.0",
-    "vite": "^3.0.7",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "vue-router": "^4.2.5",
     "mitt":"^3.0.1",
     "vue-waterfall-plugin-next": "^2.3.1",
     "animate.css": "^4.1.1",
-    "v3-waterfall": "^1.3.2"
+    "v3-waterfall": "^1.3.2",
+    "axios": "^1.6.8"
   }
 }
