--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,31 +1,33 @@
 {
-  "name": "frontend",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@element-plus/icons-vue": "^2.3.1",
-    "vue": "^3.2.37"
-  },
-  "devDependencies": {
-    "vite": "^3.2.7",
-    "@vitejs/plugin-vue": "^3.2.0",
-    "element-plus": "^2.5.0",
-    "less": "^4.2.0",
-    "less-loader": "^7.3.0",
-    "style-resources-loader": "^1.5.0",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4",
-    "vue-router": "^4.2.5",
-    "mitt":"^3.0.1",
-    "vue-waterfall-plugin-next": "^2.3.1",
-    "animate.css": "^4.1.1",
-    "v3-waterfall": "^1.3.2",
-    "axios": "^1.6.8"
-  }
+    "name": "frontend",
+    "private": true,
+    "version": "2.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build --minify false --mode development",
+        "build:prod": "vite build --mode production",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "vue": "^3.5.13"
+    },
+    "devDependencies": {
+        "vite": "^5.0.0",
+        "@wailsio/runtime": "latest",
+        "@vitejs/plugin-vue": "^5.2.1",
+        "@vitejs/plugin-vue-jsx": "^4.1.1",
+        "element-plus": "^2.9.0",
+        "less": "^4.2.1",
+        "less-loader": "^12.2.0",
+        "style-resources-loader": "^1.5.0",
+        "mitt": "^3.0.1",
+        "webpack": "^5.97.0",
+        "webpack-cli": "^5.1.4",
+        "vue-router": "^4.5.0",
+        "axios": "^1.7.9",
+        "vue-waterfall-plugin-next": "^2.6.4",
+        "animate.css": "^4.1.1",
+        "v3-waterfall": "^1.3.2"
+    }
 }
