--- a/settings.yml
+++ b/settings.yml
@@ -5,7 +5,7 @@ agelimit: true
 downloadposition: Download
 likelimit: 0
 retry429: 5000
-downloadinterval: 200
+downloadinterval: 500
 retryinterval: 1000
 differauthor: false
-expired_time: 30
+expiredtime: 7
