--- a/settings.yml
+++ b/settings.yml
@@ -1,11 +1,11 @@
 prefix: 'http://127.0.0.1:'
 proxy: "7897"
 cookie: 26338360_ySk6XCx1Orw6SGDavhpnrxfYyphkNiqf
-agelimit: true
+agelimit: false
 downloadposition: Download
-likelimit: 0
+likelimit: 2000
 retry429: 5000
-downloadinterval: 500
+downloadinterval: 200
 retryinterval: 1000
 differauthor: false
 expiredtime: 7
