--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
     "name": "frontend",
     "private": true,
-    "version": "2.0.0",
+    "version": "1.1.0",
     "type": "module",
     "scripts": {
         "dev": "vite",
@@ -21,13 +21,11 @@
         "less": "^4.2.1",
         "less-loader": "^12.2.0",
         "style-resources-loader": "^1.5.0",
-        "mitt": "^3.0.1",
         "webpack": "^5.97.0",
         "webpack-cli": "^5.1.4",
         "vue-router": "^4.5.0",
         "axios": "^1.7.9",
         "vue-waterfall-plugin-next": "^2.6.4",
-        "animate.css": "^4.1.1",
-        "v3-waterfall": "^1.3.2"
+        "animate.css": "^4.1.1"
     }
 }
