--- a/settings.yml
+++ b/settings.yml
@@ -1,11 +1,12 @@
 prefix: 'http://127.0.0.1:'
 proxy: "7897"
-cookie: 26338360_ySk6XCx1Orw6SGDavhpnrxfYyphkNiqf
+cookie: 26338360_2eDJja3qAajogrfzCFkv0qHAWnvuzzyJ
 agelimit: false
 downloadposition: Download
-likelimit: 2000
+likelimit: 1500
 retry429: 5000
 downloadinterval: 200
 retryinterval: 1000
 differauthor: false
 expiredtime: 7
+useproxy: true
