fix write buffer

--- a/settings.yml
+++ b/settings.yml
@@ -1,6 +1,6 @@
 prefix: 'http://127.0.0.1:'
 proxy: "7897"
-cookie: 26338360_2eDJja3qAajogrfzCFkv0qHAWnvuzzyJ
+cookie: ''
 agelimit: false
 downloadposition: Download
 likelimit: 1500
