--- a/settings.yml
+++ b/settings.yml
@@ -1,11 +1,11 @@
 prefix: 'http://127.0.0.1:'
 proxy: "7897"
-cookie: ''
-agelimit: false
+cookie: 26338360_2eDJja3qAajogrfzCFkv0qHAWnvuzzyJ
+agelimit: true
 downloadposition: Download
-likelimit: 1500
+likelimit: 2000
 retry429: 5000
-downloadinterval: 200
+downloadinterval: 400
 retryinterval: 1000
 differauthor: false
 expiredtime: 7
