--- a/web/package.json
+++ b/web/package.json
@@ -21,10 +21,11 @@
         "less": "^4.2.1",
         "less-loader": "^12.2.0",
         "vue-router": "^4.5.0",
-        "axios": "^1.7.9",
+        "axios": "1.12.0",
         "vue-waterfall-plugin-next": "^2.6.4",
         "animate.css": "^4.1.1",
         "gif.js":"^0.2.0",
-        "jszip": "^3.10.1"
+        "jszip": "^3.10.1",
+        "pinia": "^3.0.3"
     }
 }
