feat: tidy code

--- a/configs/Example配置文件实例.yml
+++ b/configs/Example配置文件实例.yml
@@ -4,11 +4,13 @@ proxy: "7897"
 #根据本地代理修改: "http://127.0.0.1:xxxxx"   xxxx为你代理使用的端口
 cookie: xxxxxxxxxxxxxx
 
-useproxy: true
 #是否启用代理
 agelimit: true
-
+#下载位置(相对)
 downloadposition: Download
+
+# 收藏数限制 ,低于的不下载
+likelimit: 2000
 
 # ms(毫秒) & > 1000(After revision)
 retry429: 10000
@@ -19,9 +21,8 @@ downloadinterval: 1000
 # ms(毫秒) & > 200(After revision)
 retryinterval: 3000
 
-likelimit: 2000
-# 收藏数限制 ,低于的不下载
-differauthor: false
 # 下载是否以作者id单独区分
+differauthor: false
+# 缓存超时时间(天)
 expiredtime: 7
-# 缓存超时时间
+useproxy: true
